feat: switch to palantir javapoet